# revturbine-sdk

./: .gitignore  .npmrc  LICENSE  README.md  package.json
core/: index.ts
docs/: README.md  sdk-integration-points.md
pages-build/: .markdownlint.json  .markdownlintignore  .npmrc  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.typedoc.json
scripts/: sync-root-pins.mjs
server-csharp/: RevTurbine.Sdk.Server.csproj
server-java/: README.md  build.gradle
server-node/: README.md  client.ts  index.ts  local-server.ts  package.json  types.ts
server-python/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
server-python/revturbine_server/: __init__.py
server-python/src/revturbine/: __init__.py  config.py  sdk.py  types.py
server-python/src/revturbine/core/: __init__.py  crypto.py  helpers.py  normalization.py
server-python/src/revturbine/core/adapters/: __init__.py  static.py  types.py
server-python/src/revturbine/core/decisions/: __init__.py  engine.py  types.py
server-python/src/revturbine/core/entitlements/: __init__.py  entitlement_check.py  rules.py  segment_matching.py  unlimited.py
server-python/src/revturbine/core/placements/: __init__.py  entitlement_gate_gating.py  local_resolver.py  payload_resolution.py  placement_decision.py  qualifier_gating.py  threshold_gating.py  trial_gating.py
server-python/src/revturbine/core/providers/: __init__.py  registry.py  types.py
server-python/src/revturbine/core/rules/: __init__.py  plan_eligibility.py
server-python/src/revturbine/core/runtime/: __init__.py  local_runtime.py
server-python/src/revturbine/core/state/: __init__.py  cap_enforcer.py  impression_history.py  impression_history_stores.py  impression_history_types.py  interaction.py  interaction_tracker.py  storage.py  types.py
server-python/src/revturbine/core/trials/: __init__.py  trial_status.py
server-python/tests/: test_crypto.py  test_helpers.py  test_normalization.py  test_public_api.py  test_server_client_alias.py  test_server_client_placement.py  test_smoke.py  test_trial_overlay_upsert.py
server-python/tests/adapters/: test_static.py
server-python/tests/decisions/: test_engine.py  test_engine_pilot.py
server-python/tests/entitlements/: test_entitlement_check.py  test_rules.py  test_segment_matching.py
server-python/tests/integration/: published_sdk_check.py
server-python/tests/parity_contract/: test_normalize.py
server-python/tests/placements/: test_entitlement_gate_gating.py  test_local_resolver.py  test_payload_resolution.py  test_placement_decision.py  test_qualifier_gating.py  test_threshold_gating.py
server-python/tests/providers/: test_registry.py
server-python/tests/rules/: test_plan_eligibility.py
server-python/tests/runtime/: test_local_runtime.py
server-python/tests/state/: test_cap_enforcer.py  test_impression_history.py  test_impression_history_stores.py  test_interaction.py  test_interaction_tracker.py  test_storage.py
server-python/tests/trials/: test_trial_status.py
server-rust/: Cargo.toml  README.md
server-rust/src/: client.rs  lib.rs
web-sdk/: .npmrc  analytics-posthog-integration.test.ts  analytics.test.ts  analytics.ts  api-client.ts  branding.test.ts  branding.ts  browser-runtime.test.ts  browser-runtime.ts  config-artifact.test.ts  config-artifact.ts  control-plane-events.test.ts  control-plane-events.ts  controllers-exposure-mode.test.ts  controllers-slot-lifecycle.test.ts  controllers.test.ts  controllers.ts  (+41 more)
(+259 files in other folders)
