[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revturbine"
version = "0.2.44"
description = "RevTurbine SDK for Python — local-mode and HTTP-mode placement and entitlement decisioning"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{ name = "RevTurbine" }]
dependencies = [
    # `pydantic[email]` (not bare pydantic): the vendored generated
    # `revturbine.types` models (plan 33 REQ-4) declare EmailStr fields,
    # which import `email-validator` at model-build time — required for
    # `import revturbine.types` / `revturbine_server` to load. (REQ-12
    # justification: it is a hard import-time dep of the required
    # generated-types artifact, not an optional add.)
    "pydantic[email]>=2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

# The typed `revturbine` package (src-layout, the headless in-memory SDK —
# plan 33 TASK-7's `RevTurbineCustomerSdk`) ships alongside the legacy
# `revturbine_server` thin-RPC HTTP client. They are independent and
# composable: the headless-server scope decision keeps `revturbine_server`
# unchanged rather than folding it into a dual-mode dispatch (the original
# plan's `runtime_mode` framing is superseded).
[tool.hatch.build.targets.wheel]
packages = ["src/revturbine", "revturbine_server"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# `src/revturbine/types.py` is the vendored datamodel-codegen artifact
# (plan 33 REQ-4) — generated, never hand-edited, not lint-owned here.
extend-exclude = ["src/revturbine/types.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/revturbine", "tests"]
# `src/revturbine/types.py` is the vendored datamodel-codegen artifact
# (plan 33 REQ-4) — generated, never hand-edited, not strict-typed here.
# `revturbine_server` now imports that vendored `revturbine.types` fine,
# but its legacy typing stays out of mypy --strict by deliberate scope
# decision (independent legacy surface; not retyped here).
exclude = ["revturbine_server/", "build/", "src/revturbine/types\\.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]
